--- a/index.html
+++ b/index.html
@@ -7,16 +7,143 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<section></section>
+		<!-- First section -->
+		<section class="first_section">
+			<!-- Top part -->
+			<div class="">
+				<!-- Big Icon -->
+				<div class=""></div>
+				<!-- Two rounded sections -->
+				<div class=""></div>
+			</div>
+
+			<!-- Down part -->
+			<div class="third_rounded">
+				<div class="third_rounded_inner">
+					<p>
+						Apple’s mission is to bring the best user experience to its
+						customers through its innovative products and services. The
+						company’s vision is to create an ecosystem of hardware, software,
+						and services that work together seamlessly.
+					</p>
+				</div>
+			</div>
+		</section>
+
+		<!-- Performances -->
+		<section class="performance">
+			<div class="performance_left">
+				<div class="performance_icon_text">
+					<div class="">
+						<img src="/assets/performance//financial.png" alt="" />
+					</div>
+					<div class="">
+						<h2>Financial Performance</h2>
+						<p>
+							Apple Inc. (AAPL) has seen tremendous financial success in recent
+							years. In 2023, their total assets were $32.2 trillion, with
+							current assets amounting to $11.2 trillion, current cash of $558.7
+							billion, long-term investments of $2.19 trillion, and shareholder
+							equity of $6.21 trillion
+						</p>
+					</div>
+				</div>
+
+				<div class="performance_icon_text">
+					<div class="">
+						<img src="/assets/performance//key.png" alt="" />
+					</div>
+					<div class="">
+						<h2>Key Ratios</h2>
+						<p>
+							Apple Inc. (AAPL) has a price-to-earnings ratio of 27.9, a
+							price-to-book ratio of 42.4, and a debt-to-equity ratio of 2.5.
+							These ratios provide an indication of the company's financial
+							health and performance.
+						</p>
+					</div>
+				</div>
+
+				<div class="performance_icon_text">
+					<div class="">
+						<img src="/assets/performance/dividends.png" alt="" />
+					</div>
+					<div class="">
+						<h2>Dividends and Returns</h2>
+						<p>
+							Apple Inc. (AAPL) has a solid dividend history with quarterly
+							payments of $0.24 declared in May 2023. The dividend yield for
+							Apple Inc. is 0%, due to the high stock price of the company.
+						</p>
+					</div>
+				</div>
+			</div>
+			<div class="performance_right">
+				<div class="performance_icon_text">
+					<div class="">
+						<img src="/assets/performance/market.png" alt="" />
+					</div>
+					<div class="">
+						<h2>Market Performance</h2>
+						<p>
+							Apple Inc has had a strong stock performance over the last year,
+							with its share price rising by 0.246% compared to the broader
+							market. Over the last two years, it has seen a growth of 0.339%.
+						</p>
+					</div>
+				</div>
+				<div class="performance_icon_text">
+					<div class="">
+						<img src="/assets/performance/recent.png" alt="" />
+					</div>
+					<div class="">
+						<h2>Recent News and Events</h2>
+						<p>
+							Recent news, events, and developments related to Apple (AAPL) have
+							been plentiful. In March, the company welcomed Lionel Messi to
+							South Florida with a massive new billboard.
+						</p>
+					</div>
+				</div>
+			</div>
+		</section>
 
 		<!-- Image Section -->
 		<section class="image_section">
 			<div class="image_section_detail">
-				<img src="/assets/heading1.png" alt="" />
-				<div class="">
-					<p>01</p>
+				<img src="/assets/heading1.png" alt="" style="width: 100%" />
+				<div class="image_section_text">
+					<p class="image_section_text_number" style="color: white">01</p>
 					<div class="">
-						<p>HEADING 1</p>
+						<p style="color: white; font-weight: bold">HEADING 1</p>
+						<p>
+							We are pleased to present you with an in-depth investment report
+							on {symbol}.
+						</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="image_section_detail">
+				<img src="/assets/heading2.png" alt="" style="width: 100%" />
+				<div class="image_section_text">
+					<p class="image_section_text_number" style="color: white">01</p>
+					<div class="">
+						<p style="color: white; font-weight: bold">HEADING 1</p>
+						<p>
+							We are pleased to present you with an in-depth investment report
+							on {symbol}.
+						</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="image_section_detail">
+				<img src="/assets/heading3.png" alt="" style="width: 100%" />
+				<div class="image_section_text">
+					<p class="image_section_text_number" style="color: white">01</p>
+					<div class="">
+						<p style="color: white; font-weight: bold">HEADING 1</p>
 						<p>
 							We are pleased to present you with an in-depth investment report
 							on {symbol}.
