--- a/index.html
+++ b/index.html
@@ -10,16 +10,79 @@
 		<!-- First section -->
 		<section class="first_section">
 			<!-- Top part -->
-			<div class="">
+			<div class="" style="display: flex; align-items: center">
 				<!-- Big Icon -->
-				<div class=""></div>
+				<div
+					class=""
+					style="display: flex; justify-content: center; align-items: center">
+					<div
+						style="
+							background-color: #0eb3a9;
+							padding: 10px;
+							border-radius: 50%;
+							width: 260px;
+							height: 260px;
+							display: flex;
+							justify-content: center;
+							align-items: center;
+						">
+						<div class="">
+							<div
+								class=""
+								style="
+									display: flex;
+									flex: 1;
+									background-color: #0eb3a9;
+									border-radius: 50%;
+									padding: 30px;
+									justify-content: center;
+									align-items: center;
+									width: 200px;
+									height: 200px;
+									border: 2px solid white;
+								">
+								<!-- <div class=""> -->
+								<img src="/assets/top/business.png" alt="" />
+								<!-- </div> -->
+							</div>
+						</div>
+					</div>
+				</div>
 				<!-- Two rounded sections -->
-				<div class=""></div>
+				<div class="">
+					<div class="rounded">
+						<div class="rounded_inner" style="padding: 0">
+							<p>
+								Apple Inc., commonly known as Apple, is a multinational
+								technology company headquartered in Cupertino, United States.
+								Founded in 1976 by Steve Jobs, Apple revolutionized personal
+								technology with the introduction of the Macintosh in 1984.
+								Today, Apple is the world leader in innovation, with products
+								like iPhone, iPad, Mac, Apple Watch, and more. Apple’s core
+								business activities are focused on the development of consumer
+								electronics, computer software, and online services
+							</p>
+						</div>
+					</div>
+
+					<div class="rounded">
+						<div class="rounded_inner" style="padding: 0px">
+							<p>
+								We are pleased to present you with an in-depth investment report
+								on {symbol}. This report aims to provide you with valuable
+								insights and fundamental data related to your investment. Our
+								analysis is based on information available through a data
+								service API, offering a comprehensive view of the company's
+								performance and potential.
+							</p>
+						</div>
+					</div>
+				</div>
 			</div>
 
 			<!-- Down part -->
-			<div class="third_rounded">
-				<div class="third_rounded_inner">
+			<div class="rounded">
+				<div class="rounded_inner">
 					<p>
 						Apple’s mission is to bring the best user experience to its
 						customers through its innovative products and services. The
