--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<!-- First section -->
-		<section class="first_section">
+		<section class="first_section" style="">
 			<!-- Top part -->
 			<div class="" style="display: flex; align-items: center">
 				<!-- Big Icon -->
@@ -20,8 +20,8 @@
 							background-color: #0eb3a9;
 							padding: 10px;
 							border-radius: 50%;
-							width: 260px;
-							height: 260px;
+							width: 210px;
+							height: 210px;
 							display: flex;
 							justify-content: center;
 							align-items: center;
@@ -37,8 +37,8 @@
 									padding: 30px;
 									justify-content: center;
 									align-items: center;
-									width: 200px;
-									height: 200px;
+									width: 150px;
+									height: 150px;
 									border: 2px solid white;
 								">
 								<!-- <div class=""> -->
@@ -218,7 +218,9 @@
 
 		<!-- Market Info -->
 		<section class="market_info">
-			<h2 style="text-align: center">Market Info</h2>
+			<h2 style="text-align: center; margin-top: 0px; margin-bottom: -10px">
+				Market Info
+			</h2>
 
 			<div class="market_info_section">
 				<!-- Individual stock markets -->
