--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="style.css" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
+			rel="stylesheet"
+		/>
+
+		<link
+			href="https://fonts.googleapis.com/css2?family=News+Cycle:wght@400;700&display=swap"
+			rel="stylesheet"
+		/>
+
 		<title>Document</title>
 	</head>
 	<body>
@@ -14,7 +24,8 @@
 				<!-- Big Icon -->
 				<div
 					class=""
-					style="display: flex; justify-content: center; align-items: center">
+					style="display: flex; justify-content: center; align-items: center"
+				>
 					<div
 						style="
 							background-color: #0eb3a9;
@@ -25,7 +36,8 @@
 							display: flex;
 							justify-content: center;
 							align-items: center;
-						">
+						"
+					>
 						<div class="">
 							<div
 								class=""
@@ -40,7 +52,8 @@
 									width: 150px;
 									height: 150px;
 									border: 2px solid white;
-								">
+								"
+							>
 								<!-- <div class=""> -->
 								<img src="/assets/top/business.png" alt="" />
 								<!-- </div> -->
@@ -190,7 +203,7 @@
 			<div class="image_section_detail">
 				<img src="/assets/heading2.png" alt="" style="width: 100%" />
 				<div class="image_section_text">
-					<p class="image_section_text_number" style="color: white">01</p>
+					<p class="image_section_text_number" style="color: white">02</p>
 					<div class="">
 						<p style="color: white; font-weight: bold">HEADING 1</p>
 						<p>
@@ -204,7 +217,7 @@
 			<div class="image_section_detail">
 				<img src="/assets/heading3.png" alt="" style="width: 100%" />
 				<div class="image_section_text">
-					<p class="image_section_text_number" style="color: white">01</p>
+					<p class="image_section_text_number" style="color: white">03</p>
 					<div class="">
 						<p style="color: white; font-weight: bold">HEADING 1</p>
 						<p>
