--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<!-- First section -->
 		<section class="first_section">
 			<!-- Top part -->
-			<div class="" style="display: flex; align-items: center">
+			<div class="" style="display: flex; gap: 10px; align-items: center">
 				<!-- Big Icon -->
 				<div
 					class=""
@@ -36,8 +36,8 @@
 							background-color: #0eb3a9;
 							padding: 10px;
 							border-radius: 50%;
-							width: 180px;
-							height: 180px;
+							width: 150px;
+							height: 150px;
 							display: flex;
 							justify-content: center;
 							align-items: center;
@@ -54,13 +54,13 @@
 									padding: 30px;
 									justify-content: center;
 									align-items: center;
-									width: 130px;
-									height: 130px;
+									width: 100px;
+									height: 100px;
 									border: 2px solid white;
 								"
 							>
 								<!-- <div class=""> -->
-								<img src="/assets/top/business.png" alt="" width="90%" />
+								<img src="/assets/top/business.png" alt="" width="100%" />
 								<!-- </div> -->
 							</div>
 						</div>
@@ -69,30 +69,15 @@
 				<!-- Two rounded sections -->
 				<div class="">
 					<div class="rounded">
-						<div class="rounded_inner">
-							<div class="bell_rounded">
-								<div class="bell_rounded_inner">
-									<img src="/assets/top/bell-dollar.png" alt="" width="80%" />
-								</div>
-							</div>
-							<p>
-								Apple Inc., commonly known as Apple, is a multinational
-								technology company headquartered in Cupertino, United States.
-								Founded in 1976 by Steve Jobs, Apple revolutionized personal
-								technology with the introduction of the Macintosh in 1984.
-								Today, Apple is the world leader in innovation, with products
-								like iPhone, iPad, Mac, Apple Watch, and more. Apple’s core
-								business activities are focused on the development of consumer
-								electronics, computer software, and online services
-							</p>
-						</div>
-					</div>
-
-					<div class="rounded">
-						<div class="rounded_inner">
-							<div class="finance_rounded">
-								<div class="finance_rounded_inner">
-									<img src="/assets/top/finance.png" alt="" width="80%" />
+						<div
+							class="rounded_inner"
+							style="border: 0px; display: flex; align-items: end"
+						>
+							<div class="">
+								<div class="bell_rounded">
+									<div class="bell_rounded_inner">
+										<img src="/assets/top/bell-dollar.png" alt="" width="60%" />
+									</div>
 								</div>
 							</div>
 							<p>
@@ -102,6 +87,28 @@
 								analysis is based on information available through a data
 								service API, offering a comprehensive view of the company's
 								performance and potential.
+							</p>
+						</div>
+					</div>
+
+					<div class="rounded">
+						<div class="rounded_inner">
+							<div class="finance_rounded">
+								<div class="finance_rounded_inner">
+									<img src="/assets/top/finance.png" alt="" width="60%" />
+								</div>
+							</div>
+							<p>
+								Apple Inc., commonly known as Apple, is a multinational
+								technology company headquartered in Cupertino, United States.
+								Founded in 1976 by Steve Jobs, Apple revolutionized personal
+								technology with the introduction of the Macintosh in 1984.
+								Today, Apple is the world leader in innovation, with products
+								like iPhone, iPad, Mac, Apple Watch, and more.
+							</p>
+							<p>
+								Apple’s core business activities are focused on the development
+								of consumer electronics, computer software, and online services
 							</p>
 						</div>
 					</div>
@@ -234,7 +241,7 @@
 			<img
 				src="/assets/second-page-top.png"
 				alt=""
-				style="width: 100%; margin-bottom: 2px"
+				style="width: 100%; margin-bottom: 20px"
 			/>
 		</section>
 
@@ -285,18 +292,32 @@
 
 		<!-- Market Info -->
 		<section class="market_info">
-			<h2 style="text-align: center; margin-top: 0px; margin-bottom: -10px">
+			<h2
+				style="
+					text-align: center;
+					margin-top: 0px;
+					margin-bottom: -10px;
+					color: #084945;
+					font-size: 1.3rem;
+					font-weight: 800;
+				"
+			>
 				Market Info
 			</h2>
 
 			<div class="market_info_section">
 				<!-- Individual stock markets -->
 				<div class="market_info_section_detail">
-					<div class="stock_market_dot_text">
+					<div class="market_info_market_dot_heading">
 						<span class="stock_market_dot"></span>
 						<h3>Stock Market</h3>
+						<img
+							src="/assets/stock market/stockmarket1.png"
+							alt=""
+							class="market_info_image"
+						/>
 					</div>
-					<p>
+					<p class="stock_market_dot_text">
 						Apple Inc has had a strong stock performance over the last year,
 						with its share price rising by 0.246% compared to the broader
 						market. Over the last two years, it has seen a growth of 0.339%.
@@ -304,11 +325,16 @@
 				</div>
 
 				<div class="market_info_section_detail">
-					<div class="stock_market_dot_text">
+					<div class="market_info_market_dot_heading">
 						<span class="stock_market_dot"></span>
 						<h3>Stock Market</h3>
+						<img
+							src="/assets/stock market/stockmarket2.png"
+							alt=""
+							class="market_info_image"
+						/>
 					</div>
-					<p>
+					<p class="stock_market_dot_text">
 						Apple Inc has had a strong stock performance over the last year,
 						with its share price rising by 0.246% compared to the broader
 						market. Over the last two years, it has seen a growth of 0.339%.
@@ -316,11 +342,16 @@
 				</div>
 
 				<div class="market_info_section_detail">
-					<div class="stock_market_dot_text">
+					<div class="market_info_market_dot_heading">
 						<span class="stock_market_dot"></span>
 						<h3>Stock Market</h3>
+						<img
+							src="/assets/stock market/stockmarket3.png"
+							alt=""
+							class="market_info_image"
+						/>
 					</div>
-					<p>
+					<p class="stock_market_dot_text">
 						Apple Inc has had a strong stock performance over the last year,
 						with its share price rising by 0.246% compared to the broader
 						market. Over the last two years, it has seen a growth of 0.339%.
@@ -333,11 +364,11 @@
 		<section class="stock_market_grid">
 			<div class="stock_market">
 				<div class="stock_market_text">
-					<div class="stock_market_dot_text">
+					<div class="stock_market_dot_heading">
 						<span class="stock_market_dot"></span>
 						<h3>Stock Market</h3>
 					</div>
-					<p>
+					<p class="stock_market_dot_text">
 						Apple Inc has had a strong stock performance over the last year,
 						with its share price rising by 0.246% compared to the broader
 						market. Over the last two years, it has seen a growth of 0.339%.
@@ -348,11 +379,11 @@
 
 			<div class="stock_market">
 				<div class="stock_market_text">
-					<div class="stock_market_dot_text">
+					<div class="stock_market_dot_heading">
 						<span class="stock_market_dot"></span>
 						<h3>Stock Market</h3>
 					</div>
-					<p>
+					<p class="stock_market_dot_text">
 						Apple Inc has had a strong stock performance over the last year,
 						with its share price rising by 0.246% compared to the broader
 						market. Over the last two years, it has seen a growth of 0.339%.
@@ -363,11 +394,11 @@
 
 			<div class="stock_market">
 				<div class="stock_market_text">
-					<div class="stock_market_dot_text">
+					<div class="stock_market_dot_heading">
 						<span class="stock_market_dot"></span>
 						<h3>Stock Market</h3>
 					</div>
-					<p>
+					<p class="stock_market_dot_text">
 						Apple Inc has had a strong stock performance over the last year,
 						with its share price rising by 0.246% compared to the broader
 						market. Over the last two years, it has seen a growth of 0.339%.
@@ -378,11 +409,11 @@
 
 			<div class="stock_market">
 				<div class="stock_market_text">
-					<div class="stock_market_dot_text">
+					<div class="stock_market_dot_heading">
 						<span class="stock_market_dot"></span>
 						<h3>Stock Market</h3>
 					</div>
-					<p>
+					<p class="stock_market_dot_text">
 						Apple Inc has had a strong stock performance over the last year,
 						with its share price rising by 0.246% compared to the broader
 						market. Over the last two years, it has seen a growth of 0.339%.
