--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
 									align-items: center;
 									width: 100px;
 									height: 100px;
-									border: 2px solid white;
+									border: 1px solid white;
 								"
 							>
 								<!-- <div class=""> -->
-								<img src="/assets/top/business.png" alt="" width="100%" />
+								<img src="/assets/top/business.svg" alt="" width="100%" />
 								<!-- </div> -->
 							</div>
 						</div>
@@ -76,7 +76,7 @@
 							<div class="">
 								<div class="bell_rounded">
 									<div class="bell_rounded_inner">
-										<img src="/assets/top/bell-dollar.png" alt="" width="60%" />
+										<img src="/assets/top/bell-dollar.svg" alt="" width="60%" />
 									</div>
 								</div>
 							</div>
@@ -95,7 +95,7 @@
 						<div class="rounded_inner">
 							<div class="finance_rounded">
 								<div class="finance_rounded_inner">
-									<img src="/assets/top/finance.png" alt="" width="60%" />
+									<img src="/assets/top/finance.svg" alt="" width="60%" />
 								</div>
 							</div>
 							<p>
@@ -124,7 +124,7 @@
 					<div class="">
 						<div class="user_rounded">
 							<div class="user_rounded_inner">
-								<img src="/assets/top/user.png" alt="" width="80%" />
+								<img src="/assets/top/user.svg" alt="" width="80%" />
 							</div>
 						</div>
 					</div>
