changed css to bootstrap

--- a/majid/index.html
+++ b/majid/index.html
@@ -14,6 +14,8 @@
 			rel="stylesheet"
 		/>
 
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
 		<title>Document</title>
 	</head>
 	<body>
@@ -139,14 +141,14 @@
 		</section>
 
 		<!-- Performances -->
-		<section class="performance">
-			<div class="performance_left">
-				<div class="performance_icon_group">
+		<section class="performance d-flex gap-2 p-4 ">
+			<div class="performance_left bg-light p-2 rounded-4x flex-grow-1 ">
+				<div class="performance_icon_group d-flex gap-2 align-items-start ">
 					<div class="">
 						<img
 							src="/assets/performance//financial.png"
 							alt=""
-							class="performance_icon"
+							class="performance_icon w-100 h-100"
 						/>
 					</div>
 					<div class="performance_text">
@@ -161,12 +163,12 @@
 					</div>
 				</div>
 
-				<div class="performance_icon_group">
+				<div class="performance_icon_group d-flex gap-2 align-items-start ">
 					<div class="">
 						<img
 							src="/assets/performance//key.png"
 							alt=""
-							class="performance_icon"
+							class="performance_icon w-100 h-100"
 						/>
 					</div>
 					<div class="">
@@ -180,12 +182,12 @@
 					</div>
 				</div>
 
-				<div class="performance_icon_group">
+				<div class="performance_icon_group d-flex gap-2 align-items-start ">
 					<div class="">
 						<img
 							src="/assets/performance/dividends.png"
 							alt=""
-							class="performance_icon"
+							class="performance_icon w-100 h-100"
 						/>
 					</div>
 					<div class="">
@@ -198,13 +200,13 @@
 					</div>
 				</div>
 			</div>
-			<div class="performance_right">
-				<div class="performance_icon_group">
+			<div class="performance_right p-2 rounded-4  bg-light flex-grow-1  ">
+				<div class="performance_icon_group d-flex gap-2 align-items-start ">
 					<div class="">
 						<img
 							src="/assets/performance/market.png"
 							alt=""
-							class="performance_icon"
+							class="performance_icon w-100 h-100"
 						/>
 					</div>
 					<div class="">
@@ -216,12 +218,12 @@
 						</p>
 					</div>
 				</div>
-				<div class="performance_icon_group">
+				<div class="performance_icon_group d-flex gap-2 align-items-start ">
 					<div class="">
 						<img
 							src="/assets/performance/recent.png"
 							alt=""
-							class="performance_icon"
+							class="performance_icon w-100 h-100"
 						/>
 					</div>
 					<div class="">
@@ -422,5 +424,8 @@
 				<div class="stock_market_box"></div>
 			</div>
 		</section>
+
+
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 	</body>
 </html>
