Src for images corrected

--- a/majid/index.html
+++ b/majid/index.html
@@ -146,7 +146,7 @@
 				<div class="performance_icon_group d-flex gap-2 align-items-start ">
 					<div class="">
 						<img
-							src="/assets/performance//financial.png"
+							src="assets/performance//financial.png"
 							alt=""
 							class="performance_icon w-100 h-100"
 						/>
@@ -166,7 +166,7 @@
 				<div class="performance_icon_group d-flex gap-2 align-items-start ">
 					<div class="">
 						<img
-							src="/assets/performance//key.png"
+							src="assets/performance//key.png"
 							alt=""
 							class="performance_icon w-100 h-100"
 						/>
@@ -185,7 +185,7 @@
 				<div class="performance_icon_group d-flex gap-2 align-items-start ">
 					<div class="">
 						<img
-							src="/assets/performance/dividends.png"
+							src="assets/performance/dividends.png"
 							alt=""
 							class="performance_icon w-100 h-100"
 						/>
@@ -203,12 +203,9 @@
 			<div class="performance_right p-2 rounded-4  bg-light flex-grow-1  ">
 				<div class="performance_icon_group d-flex gap-2 align-items-start ">
 					<div class="">
-						<img
-							src="/assets/performance/market.png"
-							alt=""
-							class="performance_icon w-100 h-100"
-						/>
+						<img src="assets/performance/market.png" alt="" class="performance_icon w-100 h-100"/>
 					</div>
+
 					<div class="">
 						<h2>Market Performance</h2>
 						<p>
@@ -221,7 +218,7 @@
 				<div class="performance_icon_group d-flex gap-2 align-items-start ">
 					<div class="">
 						<img
-							src="/assets/performance/recent.png"
+							src="assets/performance/recent.png"
 							alt=""
 							class="performance_icon w-100 h-100"
 						/>
